--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,7 @@
 <html>
 	<head>
-		<script src="http://openlayers.org/api/OpenLayers.js"></script>
+		<script src="OpenLayers.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	</head>
 	<body>
 		<div style="width:100%; height:100%" id="map"></div>
